JUnit 6 + target java 11 + improvements
Signed-off-by: Seppe Volkaerts <seppevolkaerts@hotmail.com>